[gd_scene load_steps=2 format=3 uid="uid://b4x2xevxk0n5q"]

[ext_resource type="Script" path="res://src/main.gd" id="1_main"]

[node name="Main" type="Node"]
script = ExtResource("1_main")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Godotwind - ESM Reader Test"

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="LoadSection" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="PathEdit" type="LineEdit" parent="UI/VBoxContainer/LoadSection"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Path to Morrowind.esm..."

[node name="BrowseButton" type="Button" parent="UI/VBoxContainer/LoadSection"]
layout_mode = 2
text = "Browse..."

[node name="LoadButton" type="Button" parent="UI/VBoxContainer/LoadSection"]
layout_mode = 2
text = "Load ESM"

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"

[node name="ProgressBar" type="ProgressBar" parent="UI/VBoxContainer"]
layout_mode = 2
value = 0.0

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Output:"

[node name="OutputText" type="RichTextLabel" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Click 'Load ESM' to load a Morrowind ESM/ESP file..."
scroll_following = true

[node name="FileDialog" type="FileDialog" parent="UI"]
title = "Open Morrowind ESM/ESP File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.esm ; Elder Scrolls Master", "*.esp ; Elder Scrolls Plugin")
